Basic pages  setup

--- a/index.html
+++ b/index.html
@@ -1,6 +1,9 @@
 <!DOCTYPE html>
 <html>
     <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>Typing Speed</title> 
         <link rel="stylesheet" href="css/style.css" type="text/css">
     </head>
     <body>
@@ -16,7 +19,7 @@
                 </select>
                 <input class="duration" type="number" placeholder="select duration (in minutes)">
             </div>
-            <button class="button">Start</button>
+            <a href="testpage.html"><button class="button">Start</button></a>
         </div>
     </body>
 </html>
