Fix duration, back button, story

--- a/index.html
+++ b/index.html
@@ -10,14 +10,20 @@
         <div class="select">
             <h1>Typing Speed Test</h1>
             <div class="userinput">
-                <label for="level">Select Level &#8595;</label>
+                <label for="level">Test Text &#8595;</label>
                 <select class="level" id="level" name="level">
                     <option value="" >--Select an Option--</option>
-                    <option value="begineer">Begineer</option>
-                    <option value="intermediate">Intermediate</option>
-                    <option value="advanced">Advanced</option>
+                    <option value="begineer">Story 1</option>
+                    <option value="intermediate">Story 2</option>
+                    <option value="advanced">Story 3</option>
                 </select>
-                <input class="duration" type="number" placeholder="select duration (in minutes)">
+                <label for="Duration">Duration &#8595;</label>
+                <select class="Duration" id="Duration" name="Duration">
+                    <option value="" >Select duration</option>
+                    <option value="2 min">2 min</option>
+                    <option value="5 min">5 min</option>
+                    <option value="10 min">10 min</option>
+                </select>
             </div>
             <a href="testpage.html"><button class="button">Start</button></a>
         </div>
