--- a/result.html
+++ b/result.html
@@ -22,7 +22,7 @@
                 <p>92%</p>
                 <p>44 wpm</p>
             </div>
-            <a href="testpage.html"><button class="button">Back</button></a>
+            <a href="javascript:history.back()"><button class="button">Back</button></a>
         </div>
     </body>
 </html>
