--- a/testpage.html
+++ b/testpage.html
@@ -20,9 +20,8 @@
                 </div>
                 <div class="actions">
                     <!-- temparory buttons -->
-                    <button class="actionbutton">Pause</button> <!-- after click converted into resume -->
                     <a href="result.html"><button class="actionbutton">See result</button></a> <!-- stops the test in midway and show result -->
-                    <a href="index.html"><button class="actionbutton">Back</button></a>
+                    <a href="javascript:history.back()"><button class="actionbutton">Back</button></a>
                 </div>
             </div>
         </div>
