added new colors to the homepage and added comments.Also did a small change at the random index variable

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 
             <div class="DivForHeadingAndButton">
 
-            <label class="InfoAboutTime">For a slower and steady analysis of typing speed.</label>
+            <label class="InfoAboutTime">For a slow and steady analysis of typing speed.</label>
 
             <button id="ten" class="ButtonAboutTime">Lets Start!</button>                
            
