--- a/index2.html
+++ b/index2.html
@@ -7,14 +7,22 @@
     <link rel="stylesheet" href="style2.css">
 </head>
 <body>
+    
     <main>
-        <div id="TimerAndInfo">
-            <div id="time">Time: 10:00</div>
+
+        <div id="TimerAndInfo">  <!-- div for timer lhs of the screen -->
+
+            <div id="time">Time: 10:00</div> <!-- div that contains time -->
+
         </div>
-        <div id="typingPara">
+
+        <div id="typingPara"> <!-- div for the paragraph rhs of the screen -->
         </div>
+
     </main>
+
     <script src="script_typing.js"></script>
     <script src="script_timer.js"></script>
+
 </body>
 </html>
