--- a/index3.html
+++ b/index3.html
@@ -3,14 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Results</title>
     <link rel="stylesheet" href="style3.css">
 </head>
 <body>
-    <header>
+    <header> <!-- heading -->
         <h1 id="heading">Results:</h1>
     </header>
-    <main>
+    <main> <!-- main contains all the scores -->
         <div id="wpm" class="score"></div>
         <div id="spm" class="score"></div>
         <div id="correct" class="score"></div>
